# named-pipe

./: .gitignore  CMakeLists.txt  Makefile  README.md  chat.h  chatclient.cpp  chatserver.cpp  clienttest.cpp  echoclient.cpp  echoserver.cpp  named_pipe.hpp  runtest.sh  servertest.cpp  test.cpp  testdata.h
impl/: helper.hpp  named_pipe_unix.hpp  named_pipe_windows.hpp  scoped_handle.hpp
